<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.6.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>org.alfresco.ampalyser</groupId>
    <artifactId>alfresco-ampalyser</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>alfresco-ampalyser</name>

    <packaging>pom</packaging>

    <description>Alfresco Amp-a-lyser</description>

    <properties>
        <java.version>11</java.version>
    </properties>

    <scm>
        <connection>scm:git:https://github.com/Alfresco/amp-a-lyser.git</connection>
        <developerConnection>scm:git:https://github.com/Alfresco/amp-a-lyser.git</developerConnection>
        <url>https://github.com/Alfresco/amp-a-lyser</url>
    </scm>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.11.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <!-- For now internal repositories -->
        <repository>
            <id>alfresco-internal</id>
            <url>https://artifacts.alfresco.com/nexus/content/repositories/internal-releases</url>
        </repository>
        <snapshotRepository>
            <id>alfresco-internal-snapshots</id>
            <url>https://artifacts.alfresco.com/nexus/content/repositories/internal-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <modules>
        <module>alfresco-ampalyser-inventory</module>
        <module>alfresco-ampalyser-analyser</module>
        <module>alfresco-ampalyser-commons</module>
        <module>alfresco-ampalyser-test</module>
    </modules>
</project>
